Archive2/39/b6887dfb21bb82/output
main.cpp:1:19: error: two or more data types in declaration of 'parameter'
 int main(int char**) {
                   ^
main.cpp: In function 'int main(...)':
main.cpp:2:20: error: cannot convert 'double***' to 'double**' in initialization
     double **d2 = &d2;
                    ^
