Archive2/39/b6887dfb21bb82/main.cpp
int main(int char**) {
    double **d2 = &d2;
}